backend/k8s-backend/cloudgateway/gate-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gate-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8765
      targetPort: 8765
  selector:
    app: gate
