backend/k8s-backend/cloudgateway/gate-ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: gate-ingress
#spec:
#  defaultBackend:
#    service:
#      name: gate-service
#      port:
#        number: 8765

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-gate-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: imotion-ip-address
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: gate-service
      port:
        number: 8765
